force-app/main/default/objects/Response_Connection__c/Response_Connection__c.object-meta.xml
<CustomObject>
    <label>Clarity Form Response Connection</label>
    <nameField>
        <label>Clarity Form Response Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clarity Form Response Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>