force-app/main/default/objects/Response_Connection__c/fields/Form_Connection__c.field-meta.xml
<CustomField>
    <fullName>Form_Connection__c</fullName>
    <label>Clarity Form Connection</label>
    <referenceTo>Form_Connection__c</referenceTo>
    <relationshipLabel>Response Connections</relationshipLabel>
    <relationshipName>Response_Connections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>