force-app/main/default/objects/Response_Connection__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Clarity Form Response</label>
    <referenceTo>Response__c</referenceTo>
    <relationshipLabel>Response Connections</relationshipLabel>
    <relationshipName>Response_Connections</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>